--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ click==8.0.1
 fastapi==0.67.0
 h11==0.12.0
 importlib-metadata==4.6.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 pydantic==1.8.2
 starlette==0.14.2
 typing-extensions==3.10.0.0
