--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "@vue/compiler-sfc": "^3.1.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.14.0"
+    "eslint-plugin-vue": "^7.14.0",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "eslintConfig": {
     "root": true,
