Add uniswap dependencies as well as first integration attempt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,16 @@ services:
     tty: true
     ports:
       - "8000:8000"
-    command: uvicorn main:app --reload --app-dir app --host 0.0.0.0
+    command: uvicorn main:app --reload --host 0.0.0.0
     build:
       dockerfile: Dockerfile
       context: backend
   
-  scout-fe:
-    tty: true
-    ports:
-      - "8080:8080"
-    command: npm run serve
-    build:
-      dockerfile: Dockerfile
-      context: frontend
+  # scout-fe:
+  #   tty: true
+  #   ports:
+  #     - "8080:8080"
+  #   command: npm run serve
+  #   build:
+  #     dockerfile: Dockerfile
+  #     context: frontend
