--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,13 +36,14 @@ protobuf==3.17.3
 pycryptodome==3.10.1
 pydantic==1.8.2
 pyrsistent==0.18.0
+python-dotenv==0.19.0
 requests==2.26.0
 rlp==2.0.1
 six==1.16.0
 starlette==0.14.2
 toolz==0.11.1
 typing-extensions==3.10.0.0
-uniswap-python==0.5.2
+uniswap-python>=0.3
 urllib3==1.26.6
 uvicorn==0.14.0
 varint==1.0.2
