--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.4.1
 async-timeout==3.0.1
 attrs==21.2.0
 base58==2.1.0
+beautifulsoup4==4.9.3
 bitarray==1.2.2
 certifi==2021.5.30
 chardet==4.0.0
@@ -40,10 +41,11 @@ python-dotenv==0.19.0
 requests==2.26.0
 rlp==2.0.1
 six==1.16.0
+soupsieve==2.2.1
 starlette==0.14.2
 toolz==0.11.1
 typing-extensions==3.10.0.0
-uniswap-python>=0.3
+uniswap-python==0.5.2
 urllib3==1.26.6
 uvicorn==0.14.0
 varint==1.0.2
