Basic structure for contracts handle

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,9 @@ services:
     build:
       dockerfile: Dockerfile
       context: frontend
+
+  scout-contracts:
+    tty: true
+    build:
+      dockerfile: Dockerfile
+      context: contracts
