Add hardhat command and port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
 
   scout-contracts:
     tty: true
+    ports:
+      - "8545:8545"
+    command: npx hardhat node
     build:
       dockerfile: Dockerfile
       context: contracts
