--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,5 +15,8 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
     "hardhat": "^2.6.4"
+  },
+  "dependencies": {
+    "@uniswap/v3-periphery": "^1.2.1"
   }
 }
