Add mongo and update readmes

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ Jinja2==3.0.1
 jsonschema==3.2.0
 lru-dict==1.1.7
 MarkupSafe==2.0.1
+motor==2.5.1
 multiaddr==0.0.9
 multidict==5.1.0
 netaddr==0.8.0
