--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,7 +29,6 @@ Jinja2==3.0.1
 jsonschema==3.2.0
 lru-dict==1.1.7
 MarkupSafe==2.0.1
-motor==2.5.1
 multiaddr==0.0.9
 multidict==5.1.0
 netaddr==0.8.0
@@ -37,6 +36,7 @@ parsimonious==0.8.1
 protobuf==3.17.3
 pycryptodome==3.10.1
 pydantic==1.8.2
+pymongo==3.12.1
 pyrsistent==0.18.0
 python-dotenv==0.19.0
 requests==2.26.0
